@@ -25,3 +25,6 @@ pig.spill.gc.activation.size=40000000
 #the following two parameters are to help estimate the reducer number
 pig.exec.reducers.bytes.per.reducer=1000000000
 pig.exec.reducers.max=999
+
+#Temporary location to store the intermediate data.
+pig.temp.dir=/tmp/
